--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <title>Let's Git It</title>
-    BUG!!!!REMOVE_ME
+    
   </head>
   <body>
     <h1>This is a sample HTML file!</h1>
     <p>This is a sample paragraph.</p>
+    <p>I'm on git branch sq_working.</p>
   </body>
 </html>
