--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>This is a sample HTML file!</h1>
     <p>This is a sample paragraph.</p>
+ Sneaky extra text.
   </body>
-  BUG!!!!REMOVE_ME
+
 </html>
